<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration.RegistrationActivity">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:alpha="0.7"
        android:background="@drawable/gg"
        android:clickable="false" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/user_registration"
        android:textColor="#673AB7"
        android:textSize="35sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/l1"
        android:layout_below="@+id/textView"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/l2"
            android:layout_width="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/usernam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autofillHints=""
                    android:background="@drawable/round"
                    android:hint="@string/user_name"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="#673AB7"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autofillHints=""
                    android:background="@drawable/round"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="#673AB7"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autofillHints=""
                    android:background="@drawable/round"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="#673AB7"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autofillHints=""
                    android:background="@drawable/round"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="#673AB7"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/country_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/round"
                android:ems="10"
                android:entries="@array/countrycode"
                android:padding="10dp"
                android:textColor="#673AB7"
                android:textSize="15sp"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autofillHints=""
                    android:background="@drawable/round"
                    android:hint="@string/phone"
                    android:inputType="none|phone"
                    android:maxLength="10"
                    android:padding="10dp"
                    android:textColor="#673AB7"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/Address1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autofillHints=""
                    android:background="@drawable/round"
                    android:ems="10"
                    android:hint="@string/address"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="#673AB7"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/village"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autofillHints=""
                    android:background="@drawable/round"
                    android:ems="10"
                    android:hint="@string/village"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="#673AB7"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/taluka"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autofillHints=""
                    android:background="@drawable/round"
                    android:ems="10"
                    android:hint="@string/taluka"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="#673AB7"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autofillHints=""
                    android:background="@drawable/round"
                    android:ems="10"
                    android:hint="@string/district"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="#673AB7"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autofillHints=""
                    android:background="@drawable/round"
                    android:ems="10"
                    android:hint="@string/state"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="#673AB7"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autofillHints=""
                    android:background="@drawable/round"
                    android:ems="10"
                    android:hint="@string/country"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="#673AB7"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autofillHints=""
                    android:background="@drawable/round"
                    android:ems="10"
                    android:hint="@string/pincode"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textColor="#673AB7"
                    android:textSize="15sp"
                    tools:ignore="TextFields" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/longi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autofillHints=""
                    android:background="@drawable/round"
                    android:ems="10"
                    android:hint="@string/longitude"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="#673AB7"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/latit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="5dp"
                    android:autofillHints=""
                    android:background="@drawable/round"
                    android:ems="10"
                    android:hint="@string/latitude"
                    android:inputType="none"
                    android:padding="10dp"
                    android:textColor="#673AB7"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/l1"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="15dp">

        <Button
            android:id="@+id/Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/round"
            android:onClick="onCancel"
            android:text="@string/back"
            android:textColor="#ffff"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:background="@drawable/round"
            android:onClick="onRegister"
            android:text="@string/submit"
            android:textColor="#ffff"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/prog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true" />
</RelativeLayout>